@@ -1,3 +1,10 @@
+Mon Mar 15 09:54:36 2004  Owen Taylor  <otaylor@redhat.com>
+
+	* gtk/gtklabel.c (gtk_label_focus): Check for 
+	Control-Tab or Control-Shift-Tab, not any Control-key
+	as a current event ... handles the case where a dialog
+	is triggered from a control accelerator better.
+
 Mon Mar 15 08:48:48 2004  Jonathan Blandford  <jrb@gnome.org>
 
 	* gtk/gtkfilechooserentry.c (match_selected_callback): implement
